# fast-api-auth-service

./: .dockerignore  .env.example  .env.test  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  api_pre_start.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_11_2003-67a98a7dbfd9_create_user_model.py  2024_02_19_2253-0362c46f9601_user_model.py  2024_02_27_1630-62cd59457288_add_user_table.py
app/api/: routers.py
app/api/dependencies/: get_current_user.py  get_db.py
app/api/endpoints/: auth.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  security.py
app/database/: db.py
app/db/: base.py  base_class.py  db.py
app/exceptions/: send_email_fail_exception.py
app/models/: base_class.py  user.py
app/repositories/: base_repository.py  users_repository.py
app/schemas/: user.py  user_schema.py
app/services/: user.py  users_service.py
migrations/: env.py
prestart_scripts/: backend_pre_start.py  prestart.sh
src/: main.py
src/config/: config.py
src/core/: config.py  security.py
src/database/: base_class.py  database.py  session.py
src/entities/: user.py
src/entities/base/: base_entity.py  request_base_model.py  response_base_model.py
src/models/: user.py
src/repositories/: base_repository.py  user_repository.py
src/schemas/: user.py
src/schemas/base/: response_base_model.py
tests/utils/: create_user.py
