[tool.poetry]
name = "fast-api-auth-service"
version = "0.1.0"
description = ""
authors = ["Dan Tche <dtcheche@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_auth_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.12.0"
sqlmodel = "^0.0.8"
black = "^23.9.1"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
