[tool.poetry]
name = "fast-api-auth-service"
version = "0.1.0"
description = ""
authors = ["Dan Tche <dtcheche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
alembic = "^1.12.1"
pydantic = "^2.5.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
autoflake = "^2.2.1"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "app/database/",
    "app/database/session.py",
    "app/core/config.py",
    "alembic"
]