[tool.poetry]
name = "fast-api-auth-service"
version = "0.1.0"
description = ""
authors = ["Dan Tche <dtcheche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
alembic = "^1.13.1"
pydantic = "^2.6.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
pre-commit = "^3.5.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.1.0"
autoflake = "^2.2.1"
mypy = "^1.8.0"
sqlmodel = "^0.0.14"
tenacity = "^8.2.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "app/database/",
    "app/database/session.py",
    "app/core/config.py",
    "alembic"
]